--- a/templates/index.html
+++ b/templates/index.html
@@ -23,33 +23,56 @@
         <script>
         </script>
 </head>
-  <body>
-  <section class="section">
-    <div class="container">
-        <h1 class="title">
-            JUNGLE RANKING
-        </h1>
-        <form action="http://localhost:5001/login" method ="POST" class="box">
-            <div class="field">
-              <label class="id">아이디</label>
-              <div class="control">
-                <input id="id" class="input" type="email" name="id">
+<body>
+    <section class="section">
+      <div class="container">
+          <h1 class="title">
+              JUNGLE RANKING
+          </h1>
+          <div class="box" >
+          <form id='login' action="http://localhost:5000/login" method="POST" >
+              <div class="field">
+                <label class="id">아이디</label>
+                <div class="control">
+                  <input class="input" name='id' type="email">
+                </div>
               </div>
-            </div>
-            <div class="field">
-              <label class="password">비밀번호</label>
-              <div class="control">
-                <input id="password" class="input" type="password"  name="password">
+              <div class="field">
+                <label class="password">비밀번호</label>
+                <div class="control">
+                  <input name="password" class="input" type="password">
+                </div>
               </div>
+              <p>
+                  <button type="submit" class="button is-info" style='float: left'>로그인</button>
+                </form>
+                <form id='login' action="http://localhost:5000/sign" method="POST">
+                  <button type="submit" style='float: right;' class="button is-info">회원가입</button>
+                </form>
+              </p>
             </div>
-
-            <p>
-                <button type="submit" class="button is-info">로그인</button>
-                <button type="submit" class="button is-info" onclick="location.href='signup.html'">회원가입</button>
-            </p>
-          </form>
-          
-    </div>
-  </section>
-  </body>
-</html>
+              <div>
+                
+              </div>
+      </div>
+    </section>
+    </body>
+  </html>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
