working get cookie and  time check button

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -35,13 +35,14 @@
         </script>
 </head>
   <body>
-    <form action="http://127.0.0.1:5000/menu" method = "GET" >
     <div style="padding-left: 90%; margin: 30px;">
     <button class="button is-link is-outlined">Outlined</button>
 </div>
     <div class="wrap">
         <div class="btn_wrap">
+            <form id='menu' action="http://localhost:5000/menu" method="GET" >
             <button type="submit" class="large">시간 입력하기</button>
+        
     </div>
     <div class="btn_wrap">
         <button type="submit" class="large">순위 보기</button>
