--- a/templates/index.html
+++ b/templates/index.html
@@ -25,38 +25,39 @@
 </head>
 <body>
     <section class="section">
-      <div class="container">
-          <h1 class="title">
-              JUNGLE RANKING
-          </h1>
-          <div class="box" >
-          <form id='login' action="http://localhost:5000/login" method="POST" >
-              <div class="field">
-                <label class="id">아이디</label>
-                <div class="control">
-                  <input class="input" name='id' type="email">
-                </div>
-              </div>
-              <div class="field">
-                <label class="password">비밀번호</label>
-                <div class="control">
-                  <input name="password" class="input" type="password">
-                </div>
-              </div>
-              <p>
-                  <button type="submit" class="button is-info" style='float: left'>로그인</button>
-                </form>
-                <form id='login' action="http://localhost:5000/sign" method="POST">
-                  <button type="submit" style='float: right;' class="button is-info">회원가입</button>
-                </form>
-              </p>
-            </div>
-              <div>
+        <div class="container">
+            <h1 class="title">
+                JUNGLE RANKING
+            </h1>
+            <form id="login-form" action="/login" method="POST" >
+                <div class="box">
+                    <div class="field">
+                        <label for="id">아이디</label>
+                        <div class="control">
+                            <input class="input" name="id" type="email" id="id">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label class="password">비밀번호</label>
+                        <div class="control">
+                            <input name="password" class="input" type="password">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="control">
+                            <button type="submit" class="button is-info" style="float: left">로그인</button>
+                        </div>
+                    </div>
                 
-              </div>
-      </div>
+            </form>
+            <form id="signup-form" action="http://localhost:5000/sign" method="POST" >
+                <button type="submit" class="button is-info"style="float: right">회원가입</button>
+            </form>
+        </div>
+        </div>
     </section>
-    </body>
+</body>
+
   </html>
   
   
