--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>JUNGLE RANKING</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -31,23 +31,24 @@
           }
           
         </style>
-        <script>
-        </script>
 </head>
   <body>
+    <form id="logout" action="/logout" method="POST">
     <div style="padding-left: 90%; margin: 30px;">
-    <button class="button is-link is-outlined">Outlined</button>
+    <button type="submit" class="button is-link is-outlined">로그아웃</button>
 </div>
+</form>
+<form id="study" action="/study" method="POST">
     <div class="wrap">
         <div class="btn_wrap">
-            <form id='menu' action="http://localhost:5000/menu" method="GET" >
-            <button type="submit" class="large">시간 입력하기</button>
-        
+            <button type="submit" class="large">공부 시작!</button>
     </div>
+  </form>
+    <form id="rank" action="/rank" method="POST">
     <div class="btn_wrap">
         <button type="submit" class="large">순위 보기</button>
     </div>
+  </form>
 </div>
-</form>
-</body>
+  </body>
 </html>
