signup connect with login page

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,11 +48,14 @@
                             <button type="submit" class="button is-info" style="float: left">로그인</button>
                         </div>
                     </div>
-                
             </form>
-            <form id="signup-form" action="http://localhost:5000/sign" method="POST" >
-                <button type="submit" class="button is-info"style="float: right">회원가입</button>
+                    <form id="signup-form" action="/signupbutton" method="POST">
+                    <div class="field">
+                        <div class="control">
+                            <button type="submit" class="button is-info"style="float: right">회원가입</button>
+                        </div>
             </form>
+        </form>
         </div>
         </div>
     </section>
