--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,57 +29,51 @@
 .btn{
   margin-top: 50px;
 }
-
+.id_ok{
+  color: blue;
+  display: none;
+}
+.id_rejected{
+  color: red;
+  display: none;
+}
 </style>
-<script>
-function signup() {
-let id= $('#setId').val();
-let password= $('#setPassword').val();
-let name = $('#setName').val();
-let classroom = $('#setClass').val();
 
-if (name == '') {
-  alert('이름을 입력하세요')
-} else if (id == '') {
-  alert('아이디를 입력하세요')
-} else if (password == '') {
-  alert('비밀번호를 입력하세요')
-}  else if (classroom == '---') {
-  alert('반을 선택해주세요')
-};
+{%with messages = get_flashed_messages()%}
+{%if messages %}
+  <script type="text/javascript">
+    alert("{{messages[-1]}}");
+  </script>
+  {%endif%}
+{%endwith%}
 
-if (password < 8){
-
-}
-}
-</script>
 </head>
 <body>
-    <div class="wrap">
+    <form class="wrap" id="signup" action="http://localhost:5000/signup" method="POST">
     <div class="field">
         <h1 class="title">회원가입</h1>
         <label class="label">이름</label>
-          <input class="input" id="setName" type="text">
+          <input class="input" name="name" type="text">
       </div>
       <div class="field">
         <label class="label">아이디</label>
         <div class="field is-grouped">
-          <input class="input" id="setId" type="text">
-          <button id='checker'class="check button is-link is-light" onclick="">중복체크</button>
+          <input class="input" name="id" type="text">
+
         </div>
       </div>
       <div class="field">
         <label class="label">비밀번호</label>
         <div class="control">
-          <input class="input" id="setPassword" type="text">
-          <h5 style="font-size: 8pt;">비밀번호는 8자리 이상 입력해주세요</h5>
+          <input class="input" name="password" type="text">
+          <h5 style="font-size: 8pt;" id="alert">비밀번호는 8자리 이상 입력해주세요</h5>
         </div>
       </div>
       <div class="field">
         <label class="label">반 선택</label>
         <div class="control">
           <div class="select">
-            <select id="setClass">
+            <select name="classroom">
               <option>---</option>
               <option>레드반</option>
               <option>블루반</option>
@@ -91,40 +85,13 @@ if (password < 8){
       
       <div class="btn field is-grouped">
         <div class="control">
-          <button class="button is-link" onclick=signup()>가입</button>
+          <button type= 'submit' class="button is-link">가입</button>
         </div>
         <div class="control">
-          <button class="button is-link is-light" onclick="location.href= 'index.html'">취소</button>
         </div>
       </div>
-    </div>
+    </form>
+    <div>
+
 </body>
 </html>
-
- <!-- <div class="field">
-        <label class="label">Username</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input is-success" type="text" placeholder="Text input" value="bulma">
-          <span class="icon is-small is-left">
-            <i class="fas fa-user"></i>
-          </span>
-          <span class="icon is-small is-right">
-            <i class="fas fa-check"></i>
-          </span>
-        </div>
-        <p class="help is-success">This username is available</p>
-      </div>
-      
-      <div class="field">
-        <label class="label">Email</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
-          <span class="icon is-small is-left">
-            <i class="fas fa-envelope"></i>
-          </span>
-          <span class="icon is-small is-right">
-            <i class="fas fa-exclamation-triangle"></i>
-          </span>
-        </div>
-        <p class="help is-danger">This email is invalid</p>
-      </div> -->
