--- a/templates/signup.html
+++ b/templates/signup.html
@@ -58,14 +58,14 @@
       <div class="field">
         <label class="label">아이디</label>
         <div class="field is-grouped">
-          <input class="input" name="id" type="text">
+          <input class="input" type="email" name="id">
 
         </div>
       </div>
       <div class="field">
         <label class="label">비밀번호</label>
         <div class="control">
-          <input class="input" name="password" type="text">
+          <input class="input" name="password" type="password">
           <h5 style="font-size: 8pt;" id="alert">비밀번호는 8자리 이상 입력해주세요</h5>
         </div>
       </div>
