css box hight adjust

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         .box {
             margin: 50px auto;
             width: 600px;
+            height :230px;
         }
         .title {
             text-align: center;
@@ -45,12 +46,10 @@
             </div>
           </form>
           <form id="signup-form" action="/signupbutton" method="POST">
-            <div class="field">
-              <div class="control">
                 <button type="submit" class="button is-info" style="float: right">회원가입</button>
-              </div>
-            </div>
           </form>
+          <div>
+          </div>
         </div>
       </div>
     </section>
