--- a/templates/date.html
+++ b/templates/date.html
@@ -40,14 +40,18 @@ h5{
   text-align: center;
 }
 	</style>
-  
+  <script>
+    
+  </script>
   </head>
   <body>
-<form id="logout" action="http://localhost:5000/logout" method="POST">
-  <div style="padding-left: 90%; margin: 30px;">
+    <form id="logout" action="/info" method="POST"></form>
+    <div style="padding-left: 80%; margin: 30px;">
+      <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
+      </div>
+      <form id="logout" action="/logout" method="POST"></form>
     <button class="button is-link is-outlined">로그아웃</button>
-</div>
-</form>
+  </form>
 <div class="edge">
 <div class="wrap">
       <div class="tile is-parent" style="float: left"  >
@@ -65,7 +69,7 @@ h5{
   </div>
     <div class="outline">
     <button class="button is-danger is-outlined" >공부 그만하기</button>
-  <form id="rank" action="http://localhost:5000/rank" method="POST">
+  <form id="rank" action="/rank" method="POST">
   <div>
     <button class="button is-warning is-light" style="margin-top: 150px;">순위 확인하기</button>
   </div>
