--- a/templates/rank.html
+++ b/templates/rank.html
@@ -27,20 +27,22 @@
         </style>
 </head>
   <body>
-    <form id="logout" action="/logout" method="POST">
-    <div style="padding-left: 90%; margin: 30px;">
+    <form id="logout" action="/info" method="POST"></form>
+    <div style="padding-left: 80%; margin: 30px;">
+      <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
+      </div>
+      <form id="logout" action="/logout" method="POST"></form>
     <button class="button is-link is-outlined">로그아웃</button>
   </form>
-  </div>
   <div class="wrap">
     <div style="margin: 30px;">
   <strong style="font-size: 30pt;">순위</strong>
 </div>
 <div class="ranking">
-  <form style= 'width: 100px; float: left;'id="rank" action="rankall" method="POST" ><button class="button is-outlined">전체순위</button></form>
-  <form style= 'width: 100px; float: left;'id="red" action="http://localhost:5000/red" method="POST"><button class="button is-danger is-outlined">RED</button></form>
-  <form style= 'width: 100px; float: left;'id="green" action="http://localhost:5000/green" method="POST"><button class="button is-success is-outlined">GREEN</button></form>
-  <form style= 'width: 100px; float: left;'id="blue" action="http://localhost:5000/blue" method="POST"><button class="button is-info is-outlined">BLUE</button></form>
+  <form style= 'width: 100px; float: left;'id="rank" action="/rank" method="POST" ><button class="button is-outlined">전체순위</button></form>
+  <form style= 'width: 100px; float: left;'id="red" action="/red" method="POST"><button class="button is-danger is-outlined">RED</button></form>
+  <form style= 'width: 100px; float: left;'id="green" action="/green" method="POST"><button class="button is-success is-outlined">GREEN</button></form>
+  <form style= 'width: 100px; float: left;'id="blue" action="/blue" method="POST"><button class="button is-info is-outlined">BLUE</button></form>
 </div>
 </div>
     <table class="table">
@@ -53,36 +55,41 @@
       </thead>
       <tfoot>
         <tr>
-          <th>(내순위)</th>
-          <th>(내이름)</th>
-          <th>(내공부시간)</th>
+          {% if user %}
+          <th>{{ rank }}</th>
+          <th>{{ name }}</th>
+          <th>{{ total }}</th>
+          {% endif %}
         </tr>
       </tfoot>
       <tbody>
+      
         <tr>
+          {% for name, total in rank %}
           <th>1</th>
-          <td>이름</td>
-          <td>00:00</td>
+          <td>{{ name }}</td>
+          <td>{{ total }}</td>
         </tr>
         <tr>
           <th>2</th>
-          <td>이름</td>
-          <td>00:00</td>
+          <td>{{ name }}</td>
+          <td>{{ total }}</td>
         </tr>
         <tr>
           <th>3</th>
-          <td>이름</td>
-          <td>00:00</td>
+          <td>{{ name }}</td>
+          <td>{{ total }}</td>
         </tr>
         <tr>
           <th>4</th>
-          <td>이름</td>
-          <td>00:00</td>
+          <td>{{ name }}</td>
+          <td>{{ total }}</td>
         </tr>
         <tr>
           <th>5</th>
-          <td>이름</td>
-          <td>00:00</td>
+          <td>{{ name }}</td>
+          <td>{{ total }}</td>
+          {% endfor %}
         </tr>
   </body>
 </html>
