--- a/templates/menu.html
+++ b/templates/menu.html
@@ -88,7 +88,7 @@
         </style>
 </head>
   <body>
-    <form id="logout" action="/info" method="POST"></form>
+    <form id="info" action="/infobutton" method="POST"></form>
     <div style="padding-left: 80%; margin: 30px;">
       <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
       </div>
