--- a/templates/menu.html
+++ b/templates/menu.html
@@ -95,7 +95,7 @@
       <form id="logout" action="/logout" method="POST"></form>
     <button class="button is-link is-outlined">로그아웃</button>
   </form>
-<form id="study" action="/study" method="POST">
+<form id="study" action="/studybutton" method="POST">
     <div class="wrap">
         <div class="btn_wrap">
             <button type="submit" class="large">공부 시작!</button>
