--- a/templates/signup.html
+++ b/templates/signup.html
@@ -56,7 +56,7 @@
       <div class="field">
         <label class="label">아이디</label>
         <div class="field is-grouped">
-          <input class="input" name="id" type="text">
+          <input class="input" name="id" type="email">
         </div>
       </div>
       <div class="field">
