--- a/templates/menu.html
+++ b/templates/menu.html
@@ -88,19 +88,20 @@
         </style>
 </head>
   <body>
-    <form id="info" action="/infobutton" method="POST"></form>
     <div style="padding-left: 80%; margin: 30px;">
+      <form id="mypage" action="/mypage" method="GET">
       <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
-      </div>
-      <form id="logout" action="/logout" method="POST"></form>
-    <button class="button is-link is-outlined">로그아웃</button>
+    </form>
+    </div>
+      <form id="logout" action="/logout" method="POST">
+      <button type="submit" class="button is-link is-outlined">로그아웃</button>
   </form>
-<form id="study" action="/study" method="POST">
+<form id="study" action="/studybutton" method="POST">
     <div class="wrap">
         <div class="btn_wrap">
             <button type="submit" class="large">공부 시작!</button>
     </div>
-  </form>
+</form>
     <form id="rank" action="/rank" method="GET">
     <div class="btn_wrap">
         <button type="submit" class="large">순위 보기</button>
