--- a/templates/date.html
+++ b/templates/date.html
@@ -56,7 +56,7 @@ h5{
 <div class="wrap">
       <div class="tile is-parent" style="float: left"  >
         <article class="tile is-child notification is-info">
-          <p class="time" id="starttime">시작시간</p>
+          <p class="time">시작시간</p>
           <p class="timer">{{ starttime }}</p>
         </article>
       </div>
@@ -67,8 +67,9 @@ h5{
       </article>
     </div>
   </div>
-  <form id="rank" action="/time/calculate" method="GET">
+  <form id="rank" action="/time/calculate" method="POST">
     <div class="outline">
+      <input class="input" name="starttime" type="text" value="{{ starttime }}" style="display:none">
     <button class="button is-danger is-outlined" >공부 그만하기</button>
   </form>
   <form id="rank" action="/rank" method="POST">
