date parsing from cursor to jinja2

--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -58,9 +58,9 @@
   </tfoot>
   <tbody>
     <tr>
-      <th>{{mydata['date']}}</th>
-      <td>{{mydata['start']}}</td>
-      <td>{{mydata['end']}}</td>
+      <th>{{mydata[0]['date']}}</th>
+      <td>00:00</td>
+      <td>00:00</td>
     </tr>
     <tr>
       <th>2023-04-05</th>
