--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -42,7 +42,7 @@
 <strong style="font-size: 30pt;">내 정보</strong>
 </div>
 <div class="time_remain">
-  <strong>1등이 되려면 남은 시간 : 00:00</strong>
+  <strong>1위가 되려면 남은 시간 : {{number_one}}</strong>
 </div>
 <table class="table">
   <thead>
