--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,3 +1,58 @@
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>JUNGLE RANKING</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        crossorigin="anonymous"></script>
+        <style>
+          .wrap{
+       display: flex;
+       justify-content: center;
+       align-items: center;
+          }
+          .btn_wrap{
+  margin-top: 200px;
+  padding: 50px;
+          }
+          .large {
+            color: white;
+            background-color: #686de0;
+            height: 100px;
+            border-radius: 10px;
+            border-color: #686de0;
+            width: 400px;
+            font-size: 20pt;
+          }
+          
+        </style>
+</head>
+  <body>
+    <form id="logout" action="http://localhost:5000/logout" method="POST">
+    <div style="padding-left: 90%; margin: 30px;">
+    <button class="button is-link is-outlined">로그아웃</button>
+</div>
+</form>
+<form id="study" action="http://localhost:5000/study" method="POST">
+    <div class="wrap">
+        <div class="btn_wrap">
+            <button class="large">공부 시작!</button>
+    </div>
+  </form>
+    <form id="rank" action="http://localhost:5000/rank" method="POST">
+    <div class="btn_wrap">
+        <button class="large">순위 보기</button>
+    </div>
+  </form>
+</div>
+  </body>
+</html> -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -33,18 +88,21 @@
         </style>
 </head>
   <body>
-    <form id="logout" action="/auth/logout" method="POST">
-    <div style="padding-left: 90%; margin: 30px;">
-    <button type="submit" class="button is-link is-outlined">로그아웃</button>
-</div>
-</form>
+    <div style="padding-left: 80%; margin: 30px;">
+      <form id="mypage" action="/mypage" method="GET">
+      <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
+    </form>
+    </div>
+      <form id="logout" action="/logout" method="POST">
+      <button type="submit" class="button is-link is-outlined">로그아웃</button>
+  </form>
 <form id="study" action="/studybutton" method="POST">
     <div class="wrap">
         <div class="btn_wrap">
             <button type="submit" class="large">공부 시작!</button>
     </div>
-  </form>
-    <form id="rank" action="/rankbutton" method="POST">
+</form>
+    <form id="rank" action="/rank" method="GET">
     <div class="btn_wrap">
         <button type="submit" class="large">순위 보기</button>
     </div>
