--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,15 @@
             text-align: center;
         }
     </style>
+     <div>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <script>
+          alert("{{messages[0]}}")
+        </script>
+        {% endif %}
+        {% endwith %}
+      </div>
   </head>
   <body>
     <section class="section">
