edit function - rank (no)

--- a/templates/date.html
+++ b/templates/date.html
@@ -74,7 +74,9 @@ h5{
   </form>
   <form id="rank" action="/rank" method="POST">
   <div>
-    <button class="button is-warning is-light" style="margin-top: 150px;">순위 확인하기</button>
+    <form id="logout" action="/rank" method="POST">
+      <button type="submit" class="button is-warning is-light" style="margin-top: 150px;">순위 확인하기</button>
+    </form>
   </div>
 </form>
 </div>
