--- a/templates/menu.html
+++ b/templates/menu.html
@@ -101,7 +101,7 @@
             <button type="submit" class="large">공부 시작!</button>
     </div>
   </form>
-    <form id="rank" action="/rank" method="GET">
+    <form id="rank" action="/rank" method="POST">
     <div class="btn_wrap">
         <button type="submit" class="large">순위 보기</button>
     </div>
