rank methods to Post from get

--- a/templates/date.html
+++ b/templates/date.html
@@ -74,7 +74,7 @@ h5{
   </form>
   <form id="rank" action="/rank" method="POST">
   <div>
-    <button class="button is-warning is-light" style="margin-top: 150px;">순위 확인하기</button>
+    <button type="submit" class="button is-warning is-light" style="margin-top: 150px;">순위 확인하기</button>
   </div>
 </form>
 </div>
