edit html - mypage logout

--- a/templates/date.html
+++ b/templates/date.html
@@ -45,12 +45,13 @@ h5{
   </script>
   </head>
   <body>
-    <form id="logout" action="/info" method="POST"></form>
+    <form id="logout" action="/mypage" method="GET">
     <div style="padding-left: 80%; margin: 30px;">
       <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
       </div>
-      <form id="logout" action="/logout" method="POST"></form>
-    <button class="button is-link is-outlined">로그아웃</button>
+    </form>
+      <form id="logout" action="/logout" method="POST">
+    <button type="submit" class="button is-link is-outlined">로그아웃</button>
   </form>
 <div class="edge">
 <div class="wrap">
