--- a/templates/rank.html
+++ b/templates/rank.html
@@ -27,10 +27,11 @@
         </style>
 </head>
   <body>
-    <form id="logout" action="/info" method="POST"></form>
+    <form id="logout" action="/mypage" method="GET">
     <div style="padding-left: 80%; margin: 30px;">
       <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
       </div>
+    </form>
       <form id="logout" action="/logout" method="POST">
     <button class="button is-link is-outlined">로그아웃</button>
   </form>
