--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -42,7 +42,9 @@
 <strong style="font-size: 30pt;">내 정보</strong>
 </div>
 <div class="time_remain">
-  <strong>1위가 되려면 남은 시간 : {{number_one}}</strong>
+ 
+  <strong>1등이 되려면 남은 시간 : {{ numberone }}</strong>
+
 </div>
 <table class="table">
   <thead>
@@ -54,34 +56,19 @@
   </thead>
   <tfoot >
     <th>총 공부시간</th>
-    <th>00:00</th>
+  
+    <th>{{ total }}</th>
+   
   </tfoot>
   <tbody>
+    {% for i in range(mydata| length) %}
     <tr>
-      <th>{{mydata[0]['date']}}</th>
-      <td>00:00</td>
-      <td>00:00</td>
+      <th>{{mydata[i]['date']}}</th>
+      <td>{{mydata[i]['start']}}</td>
+      <td>{{mydata[i]['end']}}</td>
     </tr>
-    <tr>
-      <th>2023-04-05</th>
-      <td>00:00</td>
-      <td>00:00</td>
-    </tr>
-    <tr>
-      <th>2023-04-05</th>
-      <td>00:00</td>
-      <td>00:00</td>
-    </tr>
-    <tr>
-      <th>2023-04-05</th>
-      <td>00:00</td>
-      <td>00:00</td>
-    </tr>
-    <tr>
-      <th>2023-04-05</th>
-      <td>00:00</td>
-      <td>00:00</td>
-    </tr>
+    {% endfor %}
+    
     <footer>
       <nav class="pagination is-centered" role="navigation" aria-label="pagination">
         <a class="pagination-previous">Previous</a>
