--- a/templates/date.html
+++ b/templates/date.html
@@ -7,12 +7,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         crossorigin="anonymous"></script>
 <style>
 .edge{
-  margin: 100px;
+  margin: 50px 250px 0px 250px;
 }
 article{
   text-align: center;
@@ -28,35 +30,60 @@ p{
   margin: 20px;
   font-size: 30pt;
 }
-.wrap{
-  margin: 150px;
-}
-h5{
-  font-size: 10px;
-  color: red;
-}
+
 .outline{
-  padding-top: 20%;
-  text-align: center;
+  padding-top: 15%;
+  position: absolute;
+  left: 45%;
 }
+
+.jungle {
+            font-size: 40pt;
+            color: white;
+            line-height: 200px;
+
+        }
+        .cover{
+          background-color:#a3e8f7;
+          margin: 0px auto;
+            width: 90%;
+            height: 200px;
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+          top: 0;
+        }
+      .btns {
+        padding-left: 85%; 
+        position: absolute;
+        top: 30px;
+      }
 	</style>
   <script>
-    
+   function close() {
+    let status = $('#stopbtn').css('display')
+    if (status == 'block') {
+        $('#stopbtn').hide()
+    } 
+}
   </script>
   </head>
   <body>
-    <form id="logout" action="/mypage" method="GET">
-    <div style="padding-left: 80%; margin: 30px;">
-      <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
-      </div>
+    <div class="cover">
+      <strong class="jungle">
+        JUNGLE RANKING
+      </strong>
+    </div>
+    <div class="btns">
+    <form id="info" action="/mypage" method="GET">
+      <button style='width: 100px; float: left; ' class="button is-link is-outlined" >내 정보</button>
     </form>
       <form id="logout" action="/logout" method="POST">
-    <button type="submit" class="button is-link is-outlined">로그아웃</button>
-  </form>
+    <button class="button is-link is-outlined" style="float: right; display: inline; margin-top: 20px;">로그아웃</button>
+  </form>   
+  </div>
 <div class="edge">
-<div class="wrap">
   <p style="text-align: center;">{{ date }}</p>
-      <div class="tile is-parent" style="float: left"  >
+      <div class="tile is-parent" style="float: left">
         <article class="tile is-child notification is-info">
           <p class="time">시작시간</p>
           <p class="timer">{{ starttime }}</p>
@@ -65,23 +92,24 @@ h5{
     <div class="tile is-parent" style="float: right">
       <article class="tile is-child notification is-info">
         <p class="time">종료시간</p>
-        <p class="timer">{{ endtime }}</p>
+        <p class="timer">{{endtime}}</p>
       </article>
     </div>
   </div>
-  <form id="rank" action="/time/calculate" method="POST">
     <div class="outline">
-      <input class="input" name="starttime" type="text" value="{{ starttime }}" style="display:none">
-      <input class="input" name="date" type="text" value="{{ date }}" style="display:none">
-    <button class="button is-danger is-outlined" >공부 그만하기</button>
-  </form>
-  <form id="rank" action="/rank" method="POST">
+      {% if endtime == '' %}
+      <form id="rank" action="/time" method="POST">
+        <button id="stopbtn" style="display: block;" class="button is-danger is-outlined" onclick="close()">공부 그만하기</button>
+        <input class="input" name="starttime" type="text" value="{{ starttime }}" style="display:none">
+        <input class="input" name="date" type="text" value="{{ date }}" style="display:none">
+          </form>
+      {% endif %}
+    <form id="rank" action="/rank" method="POST">
   <div>
-    <form id="logout" action="/rank" method="POST">
-      <button type="submit" class="button is-warning is-light" style="margin-top: 150px;">순위 확인하기</button>
-    </form>
+    <button class="button is-warning is-light" style="margin-top: 150px;">순위 확인하기</button>
   </div>
 </form>
 </div>
 </body>
 </html>
+
