--- a/templates/index.html
+++ b/templates/index.html
@@ -6,85 +6,74 @@
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <style>
+        .box {
+            margin: 50px auto;
+            width: 600px;
+            height :250px;
+        }
+        .jungle {
+            font-size: 40pt;
+            color: white;
+            line-height: 200px;
 
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        crossorigin="anonymous"></script>
-        <style>
-            .box{
-                margin: 50px auto;
-                width: 600px;
-                height: 250px;
-            }
-            .title{
-                text-align: center;
-            }
-          
-        </style>
+        }
+        .wrap{
+          background-color:#a3e8f7;
+          margin: 0px auto;
+            width: 90%;
+            height: 200px;
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+      
+        }
+    </style>
+     <div>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
         <script>
+          alert("{{messages[0]}}")
         </script>
-</head>
-<body>
-  <div>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <script>
-      alert("{{messages[0]}}")
-    </script>
-    {% endif %}
-    {% endwith %}
-    
-  </div>
-    <section class="section">
-        <div class="container">
-            <h1 class="title">
-                JUNGLE RANKING
-            </h1>
-            <form id="login-form" class="box" action="/login" method="POST" >
-                <div>
-                    <div class="field">
-                        <label for="id">아이디</label>
-                        <div class="control">
-                            <input class="input" name="id" type="email" id="id">
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label class="password">비밀번호</label>
-                        <div class="control">
-                            <input name="password" class="input" type="password">
-                        </div>
-                    </div>
-                    <div class="field">
-                        <div class="control">
-                            <button type="submit" class="button is-info" style="float: left">로그인</button>
-                        </div>
-                    </div>
-                
-            </form>
-            <form id="signup-form" action="/signupbutton" method="POST" >
-                <button type="submit" class="button is-info"style="float: right">회원가입</button>
-            </form>
+        {% endif %}
+        {% endwith %}
+      </div>
+  </head>
+  <body>
+      <div class="wrap">
+        <strong class="jungle">
+          JUNGLE RANKING
+        </strong>
+      </div>
+        <div class="box">
+          <form id="login-form" action="/login" method="POST">
+            <div class="field">
+              <label for="id">아이디</label>
+              <div class="control">
+                <input class="input" name="id" type="email" id="id">
+              </div>
+            </div>
+            <div class="field">
+              <label class="password">비밀번호</label>
+              <div class="control">
+                <input name="password" class="input" type="password">
+              </div>
+            </div>
+            <div class="field">
+              <div class="control">
+                <button type="submit" class="button is-info" style="float: left">로그인</button>
+              </div>
+            </div>
+          </form>
+          <form id="signup-form" action="/signupbutton" method="POST">
+                <button type="submit" class="button is-info" style="float: right">회원가입</button>
+          </form>
+          <div>
+          </div>
         </div>
-        </div>
-    </section>
-</body>
-
-  </html>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  </body>
+</html>
