--- a/templates/menu.html
+++ b/templates/menu.html
@@ -62,6 +62,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         crossorigin="anonymous"></script>
@@ -84,25 +87,49 @@
             width: 400px;
             font-size: 20pt;
           }
-          
+          .jungle {
+            font-size: 40pt;
+            color: white;
+            line-height: 200px;
+
+        }
+        .cover{
+          background-color:#a3e8f7;
+          margin: 0px auto;
+            width: 90%;
+            height: 200px;
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+          top: 0;
+        }
+      .btns {
+        padding-left: 85%; 
+        position: absolute;
+        top: 30px;
+      }
         </style>
 </head>
   <body>
-    <div style="padding-left: 80%; margin: 30px;">
-      <form id="mypage" action="/mypage" method="GET">
-      <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
-    </form>
+    <div class="cover">
+      <strong class="jungle">
+        JUNGLE RANKING
+      </strong>
     </div>
+    <div class="btns">
+    <form id="info" action="/mypage" method="GET">
+      <button style='width: 100px; float: left; ' class="button is-link is-outlined" >내 정보</button>
+    </form>
       <form id="logout" action="/logout" method="POST">
-      <button type="submit" class="button is-link is-outlined">로그아웃</button>
-  </form>
+    <button class="button is-link is-outlined" style="float: right; display: inline; margin-top: 20px;">로그아웃</button>
+  </form>   
+  </div>
 <form id="study" action="/studybutton" method="POST">
     <div class="wrap">
         <div class="btn_wrap">
             <button type="submit" class="large">공부 시작!</button>
     </div>
-  </form>
-    <form id="rank" action="/rank" method="POST">
+</form>
+    <form id="rank" action="/rank" method="GET">
     <div class="btn_wrap">
         <button type="submit" class="large">순위 보기</button>
     </div>
