--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -7,59 +7,90 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         crossorigin="anonymous"></script>
         <style>
             .wrap{
                 text-align: center;
+                margin-top: 50px;
             }
             .table{
               margin: 50px auto;
               width: 700px;
             }
-           footer{
+           /* footer{
             width: 100%;
       height: 70px;
       position: absolute;  
       bottom: 0;
       left: 0;
-           }
+           } */
            .time_remain{
             margin: auto;
             text-align: center;
            }
+           .jungle {
+            font-size: 40pt;
+            color: white;
+            line-height: 200px;
+
+        }
+        .cover{
+          background-color:#a3e8f7;
+          margin: 0px auto;
+            width: 90%;
+            height: 200px;
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+          top: 0;
+        }
+        .card{
+          background-color:#6693ee;
+          margin: auto;
+            width: 50%;
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+            margin-top: 400px;
+        }
+
+      .btns {
+        padding-left: 85%; 
+        position: absolute;
+        top: 30px;
+      }
         </style>
 </head>
   <body>
-    <form id="logout" action="/logout" method="POST">
-    <div style="padding-left: 90%; margin: 30px;">
-    <button class="button is-link is-outlined">로그아웃</button>
-</div>
-</form>
+    <div class="cover">
+      <strong class="jungle">
+        JUNGLE RANKING
+      </strong>
+    </div>
+    <div class="btns">
+      <form id="info" action="/menubutton" method="POST">
+        <button style='width: 100px; float: left; ' class="button is-link is-outlined" >메뉴</button>
+      </form>
+      <form id="logout" action="/logout" method="POST">
+        <button class="button is-link is-outlined" style="float: right; display: inline; margin-top: 20px;">로그아웃</button>
+    </form>
+  </div>
 
 <div class="wrap">
 <strong style="font-size: 30pt;">내 정보</strong>
 </div>
-<div class="time_remain">
- 
-  <strong>1등이 되려면 남은 시간 : {{ numberone }}</strong>
-
-</div>
 <table class="table">
   <thead>
-    <tr>
+    <tr >
       <th>날짜</th>
       <th>공부 시작시간</th>
       <th>공부 종료시간</th>
     </tr>
   </thead>
-  <tfoot >
-    <th>총 공부시간</th>
   
-    <th>{{ total }}</th>
-   
-  </tfoot>
   <tbody>
     {% for i in range(mydata| length) %}
     <tr>
@@ -68,19 +99,26 @@
       <td>{{mydata[i]['end']}}</td>
     </tr>
     {% endfor %}
+    </tbody>
+    </table>
+      <div class="card">
+      <table class="table" style="background-color: #6693ee;  line-height: 50px; ">
+        <tr >
+          <th style="color: white">1등이 되려면 남은 시간 : 
+            {% if number_one == 0 %}
+            1등이에요!
+            {% else %}
+            {{ number_one }}
+            {% endif %}
+          </th>
+      </tr>
+      <tr>
+        <th style="color: white">나의 일일 평균 공부시간 : {{ average }}</th>
+      </tr>
+        <th style="color: white">전체 일일 평균 공부시간 : {{ total_average }}</th>
+      </tr>
+      </table>
+    </div>
     
-    <footer>
-      <nav class="pagination is-centered" role="navigation" aria-label="pagination">
-        <a class="pagination-previous">Previous</a>
-        <a class="pagination-next">Next page</a>
-        <ul class="pagination-list">
-          <li><a href="/info" class="pagination-link" aria-label="Goto page 1">1</a></li>
-          <li><a href="/page2" class="pagination-link" aria-label="Goto page 45">2</a></li>
-          <li><a href="/page3" class="pagination-link is-current" aria-label="Page 46" aria-current="page">3</a></li>
-          <li><a href="/page4" class="pagination-link" aria-label="Goto page 47">4</a></li>
-          <li><a href="/page5" class="pagination-link" aria-label="Goto page 86">5</a></li>
-        </ul>
-      </nav>
-    </footer>
   </body>
 </html>
