--- a/templates/rank.html
+++ b/templates/rank.html
@@ -7,6 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         crossorigin="anonymous"></script>
@@ -22,19 +25,43 @@
           }
           .ranking{
           margin-left: 40%;
-
           }
+          .jungle {
+            font-size: 40pt;
+            color: white;
+            line-height: 200px;
+
+        }
+        .cover{
+          background-color:#a3e8f7;
+          margin: 0px auto;
+            width: 90%;
+            height: 200px;
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+          top: 0;
+        }
+      .btns {
+        padding-left: 85%; 
+        position: absolute;
+        top: 30px;
+      }
         </style>
 </head>
   <body>
-    <form id="logout" action="/mypage" method="GET">
-    <div style="padding-left: 80%; margin: 30px;">
-      <button style='width: 100px; float: left; margin-right: 10px;' class="button is-link is-outlined" >내 정보</button>
-      </div>
-    </form>
-      <form id="logout" action="/logout" method="POST">
-    <button class="button is-link is-outlined">로그아웃</button>
+    <div class="cover">
+    <strong class="jungle">
+      JUNGLE RANKING
+    </strong>
+  </div>
+  <div class="btns">
+  <form id="info" action="/mypage" method="GET">
+    <button style='width: 100px; float: left; ' class="button is-link is-outlined" >내 정보</button>
   </form>
+    <form id="logout" action="/logout" method="POST">
+  <button class="button is-link is-outlined" style="float: right; display: inline; margin-top: 20px;">로그아웃</button>
+</form>   
+</div>
   <div class="wrap">
     <div style="margin: 30px;">
   <strong style="font-size: 30pt;">순위</strong>
@@ -54,22 +81,22 @@
           <th>총 공부시간</th>
         </tr>
       </thead>
-      <tfoot>
-        <tr>
-       
-          <th>{{ rank }}</th>
-          <th>{{ user['name'] }}</th>
-          <th>{{ user['total'] }}분</th>
-       
-        </tr>
-      </tfoot>
       <tbody>
         {% for i in range(ranker| length) %}
         <tr>
-          <th>{{ i + 1 }}</th>
+          <th>{{ i + 1}}</th>
           <td>{{ ranker[i]['name'] }}</td>
-          <td>{{ ranker[i]['total'] }}분</td>
+          <td>{{ ranker[i]['total'] }}</td>
         </tr>
         {% endfor %}
+        <footer>
+          <tfoot>
+            <tr>
+              <th>{{ rank }}</th>
+              <th>{{ user['name'] }}</th>
+              <th>{{ user['total'] }}</th>
+            </tr>
+          </tfoot>
+        </footer>
   </body>
 </html>
