edit html -rank

--- a/templates/rank.html
+++ b/templates/rank.html
@@ -91,7 +91,7 @@
         {% endfor %}
         <footer>
           <tfoot>
-            <tr>
+            <tr style=' background-color:#a3e8f7'>
               <th>{{ rank }}</th>
               <th>{{ user['name'] }}</th>
               <th>{{ user['total'] }}</th>
